--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "landingpage",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.11"
+  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "tw": "npx tailwindcss -i ./src/assets/tailwind.css -o ./src/assets/dist/build.css --watch",
+    "dev": "vite"
   },
   "dependencies": {
-    "vue": "^3.3.11"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
-    "vite": "^5.0.10"
+    "@vitejs/plugin-vue": "^5.0.2",
+    "vue-router": "^4.0.15"
   }
 }
